Mon Jan 28 11:28:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * driver.list: (backport from the trunk) add compatibility information for
   - Atlantis Land and Mustek Powermust Office 650 (reported by
     Andrea Zicchetti)
   - Oneac XAU models

Sat Jan 26 21:16:45 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * clients/Makefile.am: backport from the trunk.
   - set libupsclient version to 1.0.0
   - use the shared version of libupsclient for LDADD
 - docs/protocol.txt: mention libupsclient

Sat Jan 26 21:16:45 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - lib/Makefile.am: only install libupsclient-config if pkg-config support is
   disabled.
 - man/libupsclient-config.1: created (Debian Lintian QA report)

Fri Jan 18 14:03:01 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * snmp-ups: backported from the trunk.
   - mgemib.h: add support for MGE* Environment Sensor (ref 66 846).
     This adds the data ambient.temperature and ambient.humidity.
   - snmp-ups.c: fix the handling of multiplier on ambient.temperature
     for units other than APC. Bump driver release to 0.421 since
     there are still differences with the trunk version.

2.2.1

Fri Dec 21 10:59:01 UTC 2007 / Arnaud Quette <arnaudquette@eaton.com>

 - Bump the release version to 2.2.1

2.2.1-pre2

Mon Dec 17 15:15:17 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - NEWS: more completion for the upcoming 2.2.1 release.

Sun Dec 16 20:19:36 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - Changed the default installation directory for pkg-config files,
   following a suggestion of Stanislav Brabec. The new default
   location is ${libdir}/pkgconfig. This is still configurable via
   the --with-pkgconfig-dir=PATH option and can be turned off with
   --without-pkgconfig-dir.

Sun Dec 16 20:10:41 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - conf/upssched.conf.sample: Insert STATEPATH into default PIPEFN
   and LOCKFN.
