@@ -394,10 +394,23 @@
 "Nitram"	"Elite 500"	""	"genericups upstype=8"
 "Nitram"	"Elite 2002"	""	"genericups upstype=16"
 
-"Oneac"	"ON700XAU"	""	"oneac"
-"Oneac"	"ON1000XAU"	""	"oneac"
-"Oneac"	"ON1500XAU"	""	"oneac"
-"Oneac" "EG/ON Series"	"advanced interface"	"oneac"
+"Oneac"	"ON400"	"advanced interface"	"oneac"
+"Oneac"	"ON600"	"advanced interface"	"oneac"
+"Oneac"	"ON900"	"advanced interface"	"oneac"
+"Oneac"	"ON1300"	"advanced interface"	"oneac"
+"Oneac"	"EG Series"	"advanced interface"	"oneac"
+"Oneac"	"ON700"	"advanced interface"	"oneac"
+"Oneac"	"ON700XAU"	"advanced interface"	"oneac"
+"Oneac"	"ON700XIU"	"advanced interface"	"oneac"
+"Oneac"	"ON1000"	"advanced interface"	"oneac"
+"Oneac"	"ON1000XAU"	"advanced interface"	"oneac"
+"Oneac"	"ON1000XIU"	"advanced interface"	"oneac"
+"Oneac"	"ON1500"	"advanced interface"	"oneac"
+"Oneac"	"ON1500XAU"	"advanced interface"	"oneac"
+"Oneac"	"ON1500XIU"	"advanced interface"	"oneac"
+"Oneac"	"ON2000"	"advanced interface"	"oneac"
+"Oneac"	"ON2000XAU"	"advanced interface"	"oneac"
+"Oneac"	"ON2000XIU"	"advanced interface"	"oneac"
 
 "Online"	"P-Series"	""	"genericups upstype=14"
 "Online"	"Zinto D"	""	"optiups"
