@@ -1,3 +1,8 @@
+Tue Jan 29 13:54:36 UTC 2008 / Charles Lepple <clepple@gmail.com>
+
+ - drivers/oneac.c, data/driver.list: (backport from the trunk) add updated
+   Oneac driver, and round out the driver list for this driver.
+
 Mon Jan 28 11:28:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>
 
  * driver.list: (backport from the trunk) add compatibility information for
